# bridge-indexer

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/abis/: bridge.json  erc20.json
src/api/: bridge.rs  transfers.rs
src/migrations/: 20231122_bridge_events.sql  20240501_update_bridge_events.sql  transfers.sql
src/models/: bridge.rs  mod.rs  transfers.rs
src/repositories/: bridge.rs  mod.rs  transfers.rs
src/services/: bridge_indexer.rs  indexer.rs  mod.rs
src/utils/: abi.rs  config.rs  ethereum.rs  mod.rs
static/: index.html
