[package]
name = "lobster"
version = "0.1.0"
edition = "2021"
default-run = "lobster"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
web3 = "0.18.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
eyre = "0.6"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "bigdecimal", "time", "chrono", "runtime-tokio-rustls"] }
dotenv = "0.15"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-tungstenite = "0.18.0"
ethabi = "16.0.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.8"
secp256k1 = { version = "0.20.3", features = ["recovery"] }
libsecp256k1 = "0.7.0"
rlp = "0.5.1"       

[[bin]]
name = "lobster"
path = "src/main.rs"

[[bin]]
name = "bridge_indexer"
path = "src/bin/bridge_indexer.rs"

[package.metadata.sqlx]
migrations = "migrations"

